unpackaged/main/default/objects/Case/fields/Absence_Claim__c.field-meta.xml
<CustomField>
    <fullName>Absence_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup to absence claim</description>
    <label>Absence Claim</label>
    <referenceTo>cvab__Claim__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>