unpackaged/main/default/objects/Case/fields/AccessAble_Grp__c.field-meta.xml
<CustomField>
    <fullName>AccessAble_Grp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AccessAble Grp</label>
    <type>Checkbox</type>
</CustomField>