unpackaged/main/default/objects/Case/fields/Account_Not_In_System__c.field-meta.xml
<CustomField>
    <fullName>Account_Not_In_System__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Not In System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>