unpackaged/main/default/objects/Case/fields/ACE_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>ACE_Claim_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ACE/FINEOS Claim Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>