unpackaged/main/default/objects/Case/fields/Acknowledgement_Sent_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Sent_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acknowledgement Sent Start Date</label>
    <type>Date</type>
</CustomField>