unpackaged/main/default/objects/Case/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <inlineHelpText>* Explained Functionality Limitations - Functional Notes required.
*Solution Provided - Solution Notes required.
* Relationship Contact Needed - Reassign case, and @mention owner.
* Service Resolution Needed - Creates Tasks for Service Resolution</inlineHelpText>
    <label>Action Taken</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thanked Customer</fullName>
            </value>
            <value>
                <fullName>Initiated Customer Contact</fullName>
            </value>
            <value>
                <fullName>Explained Functionality Limitation</fullName>
            </value>
            <value>
                <fullName>Solution Provided</fullName>
            </value>
            <value>
                <fullName>Relationship Contact Needed</fullName>
            </value>
            <value>
                <fullName>Service Resolution Needed</fullName>
            </value>
            <value>
                <fullName>No Action Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>