unpackaged/main/default/objects/Case/fields/Advice_Given__c.field-meta.xml
<CustomField>
    <fullName>Advice_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used when there was not an  issue, but we need to give them advice.</description>
    <label>Advice Given</label>
    <type>Checkbox</type>
</CustomField>