unpackaged/main/default/objects/Case/fields/Agent_Approval_by_PCCR__c.field-meta.xml
<CustomField>
    <fullName>Agent_Approval_by_PCCR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent Approval by PCCR</label>
    <type>Checkbox</type>
</CustomField>