unpackaged/main/default/objects/Case/fields/Aging_Category__c.field-meta.xml
<CustomField>
    <fullName>Aging_Category__c</fullName>
    <description>Aging Category used for reporting</description>
    <formula>IF(IsClosedOnCreate, -1, Case_Age__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aging Category</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>