unpackaged/main/default/objects/Case/fields/Approved_for_Production_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_Production_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approved for Production End Date</label>
    <type>Date</type>
</CustomField>