unpackaged/main/default/objects/Case/fields/Attachment_Type__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Type__c</fullName>
    <label>Attachment Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Central Records - Additions</fullName>
            </value>
            <value>
                <fullName>Central Records - Changes/Adjustments</fullName>
            </value>
            <value>
                <fullName>Central Records - Conversion APP</fullName>
            </value>
            <value>
                <fullName>Central Records - EOI</fullName>
            </value>
            <value>
                <fullName>Central Records - Group</fullName>
            </value>
            <value>
                <fullName>Central Records - Individual</fullName>
            </value>
            <value>
                <fullName>Central Records - Port/Convert APP</fullName>
            </value>
            <value>
                <fullName>CIS - Duplicate Policy Request App</fullName>
            </value>
            <value>
                <fullName>Maintenance Group - Terminations</fullName>
            </value>
            <value>
                <fullName>Medical Und. - Disease Elim. Rider</fullName>
            </value>
            <value>
                <fullName>Conversion APP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>