unpackaged/main/default/objects/Case/fields/Authorized_Representative__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Representative__c</fullName>
    <description>Authorized Representative - It is there in DocFinity as Correspondence - Provide a field for CS to maintain</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Authorized Representative</label>
    <length>100</length>
    <type>Text</type>
</CustomField>