unpackaged/main/default/objects/Case/fields/Awaiting_Response_Internally_Reason__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Response_Internally_Reason__c</fullName>
    <description>Internal Hold Reasons</description>
    <inlineHelpText>Enter Areas you are waiting on an Internal Response</inlineHelpText>
    <label>Awaiting  Response Internally Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commissions</fullName>
            </value>
            <value>
                <fullName>Compass Support</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Licensing and Appointments</fullName>
            </value>
            <value>
                <fullName>M&amp;B</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Policy Services</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>