unpackaged/main/default/objects/Case/fields/Benefit_Summary__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Summary__c</fullName>
    <label>Benefit Summary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>