unpackaged/main/default/objects/Case/fields/Bill_Group_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Bill_Group_Complexity__c</fullName>
    <description>Bill Group Complexity used to subtract on Group Level System work or General Services</description>
    <label>Bill Group Complexity</label>
    <summarizedField>Policy_Implementation__c.Bill_Group_Complexity__c</summarizedField>
    <summaryForeignKey>Policy_Implementation__c.Case__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>