unpackaged/main/default/objects/Case/fields/Bill_Next_Generation_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Next_Generation_Date__c</fullName>
    <formula>Group_Name__r.Master_Group__r.Bill_Next_Generation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Next Generation Date</label>
    <type>Date</type>
</CustomField>