unpackaged/main/default/objects/Case/fields/Birth_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Birth_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>capture claim intake required document has been received</description>
    <inlineHelpText>capture claim intake required document has been received</inlineHelpText>
    <label>Birth Certificate</label>
    <type>Checkbox</type>
</CustomField>