unpackaged/main/default/objects/Case/fields/Birth_Certificate_Received__c.field-meta.xml
<CustomField>
    <fullName>Birth_Certificate_Received__c</fullName>
    <description>Captures date birth certificate was received</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Captures date birth certificate was received</inlineHelpText>
    <label>Birth Certificate Received</label>
    <type>Date</type>
</CustomField>