unpackaged/main/default/objects/Case/fields/Business_Hours_Exit_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_Exit_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Hours Exit DateTime</label>
    <type>DateTime</type>
</CustomField>