unpackaged/main/default/objects/Case/fields/Case_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Assigned_Date__c</fullName>
    <description>Date case was assigned to an individual</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Case assigned date</inlineHelpText>
    <label>Case Assigned Date</label>
    <type>DateTime</type>
</CustomField>