unpackaged/main/default/objects/Case/fields/Case_Comments__c.field-meta.xml
<CustomField>
    <fullName>Case_Comments__c</fullName>
    <description>Policy Service Case Comments shows in view</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Policy Service Case Comments shows in view</inlineHelpText>
    <label>Case Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>