unpackaged/main/default/objects/Case/fields/Case_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Case_Complexity__c</fullName>
    <description>This Rollup field is defining the Complexity of Case. No longer used but API cannot be renamed or deleted because it is in extract for PowerBI</description>
    <label>Case Complexity OLD</label>
    <summarizedField>Policy_Implementation__c.Policy_Service_Status__c</summarizedField>
    <summaryForeignKey>Policy_Implementation__c.Case__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>