unpackaged/main/default/objects/Case/fields/Case_Complexity_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Case_Complexity_Amendment__c</fullName>
    <label>Case Complexity Amendment</label>
    <summarizedField>Policy_Implementation__c.Amendment_Complexity__c</summarizedField>
    <summaryForeignKey>Policy_Implementation__c.Case__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>