unpackaged/main/default/objects/Case/fields/Case_Complexity_NB__c.field-meta.xml
<CustomField>
    <fullName>Case_Complexity_NB__c</fullName>
    <description>This Rollup field is defining the Complexity of Case</description>
    <label>Case Complexity NB</label>
    <summarizedField>Policy_Implementation__c.New_Business_Complexity__c</summarizedField>
    <summaryForeignKey>Policy_Implementation__c.Case__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>