unpackaged/main/default/objects/Case/fields/Case_Complexity_Value__c.field-meta.xml
<CustomField>
    <fullName>Case_Complexity_Value__c</fullName>
    <description>Field created to capture the case complexity value manually entered by Policy Services users from current case complexity calculation spreadsheet</description>
    <inlineHelpText>Capture case complexity value from policy Implementation</inlineHelpText>
    <label>Case Complexity</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>