unpackaged/main/default/objects/Case/fields/Case_Created_By_CS_Queue__c.field-meta.xml
<CustomField>
    <fullName>Case_Created_By_CS_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this check box used for reports to Case data How many initiated by a CS</description>
    <label>Case Created By CS Queue</label>
    <type>Checkbox</type>
</CustomField>