unpackaged/main/default/objects/Case/fields/Case_Created_For_Central_Records__c.field-meta.xml
<CustomField>
    <fullName>Case_Created_For_Central_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Created For Central Records</label>
    <type>Checkbox</type>
</CustomField>