unpackaged/main/default/objects/Case/fields/Case_External_Reference__c.field-meta.xml
<CustomField>
    <fullName>Case_External_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case External Reference</label>
    <length>25</length>
    <type>Text</type>
</CustomField>