unpackaged/main/default/objects/Case/fields/Case_Group_Tier__c.field-meta.xml
<CustomField>
    <fullName>Case_Group_Tier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Group Tier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>