unpackaged/main/default/objects/Case/fields/Case_Open_Enrollment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Open_Enrollment_End_Date__c</fullName>
    <label>Case Open Enrollment End Date</label>
    <summarizedField>Open_Enrollment__c.Enrollment_End_Date__c</summarizedField>
    <summaryForeignKey>Open_Enrollment__c.Case__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>