unpackaged/main/default/objects/Case/fields/Case_Pending_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Pending_Date__c</fullName>
    <description>When Case status will pending then populate current date time in this field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Pending Date</label>
    <type>DateTime</type>
</CustomField>