unpackaged/main/default/objects/Case/fields/Case_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Case_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom field created to capture when a case has been reviewed by leadership</description>
    <inlineHelpText>Field used to identify when a case has been reviewed by leadership for the respective department.</inlineHelpText>
    <label>Case Reviewed</label>
    <type>Checkbox</type>
</CustomField>