unpackaged/main/default/objects/Case/fields/Case_Subtype_SLA__c.field-meta.xml
<CustomField>
    <fullName>Case_Subtype_SLA__c</fullName>
    <defaultValue>365</defaultValue>
    <label>Case Subtype SLA</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>