unpackaged/main/default/objects/Case/fields/Case_Tier_Level__c.field-meta.xml
<CustomField>
    <fullName>Case_Tier_Level__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <description>Used in SBMA Tier Level 0-5</description>
    <label>Case Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>