unpackaged/main/default/objects/Case/fields/CaseOpenEnrollmentStartDate__c.field-meta.xml
<CustomField>
    <fullName>CaseOpenEnrollmentStartDate__c</fullName>
    <label>Case Open Enrollment Start Date</label>
    <summarizedField>Open_Enrollment__c.Enrollment_Start_Date__c</summarizedField>
    <summaryForeignKey>Open_Enrollment__c.Case__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>