unpackaged/main/default/objects/Case/fields/Child_Case_Created_for_EDI__c.field-meta.xml
<CustomField>
    <fullName>Child_Case_Created_for_EDI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Case Created for EDI</label>
    <type>Checkbox</type>
</CustomField>