unpackaged/main/default/objects/Case/fields/Claim_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Date</label>
    <type>Date</type>
</CustomField>