unpackaged/main/default/objects/Case/fields/Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>