unpackaged/main/default/objects/Case/fields/ClaimIntakeLastRunByUser__c.field-meta.xml
<CustomField>
    <fullName>ClaimIntakeLastRunByUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClaimIntake Last Run By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>