unpackaged/main/default/objects/Case/fields/Claims_Business_Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Claims_Business_Days_Open__c</fullName>
    <formula>MAX(0,
IF(  ISNULL(Claims_End_Date_Time__c) ,
CASE(MOD( DATEVALUE( Claims_Begin_Date_Time__c ) - DATE(1985,6,24),7),
0 , CASE( MOD(TODAY()  - DATEVALUE(Claims_Begin_Date_Time__c),7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( Mod(TODAY()  - DATEVALUE(Claims_Begin_Date_Time__c),7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD(TODAY()  - DATEVALUE(Claims_Begin_Date_Time__c),7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD(TODAY()  - DATEVALUE(Claims_Begin_Date_Time__c),7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD(TODAY()  - DATEVALUE(Claims_Begin_Date_Time__c),7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD(TODAY()  - DATEVALUE(Claims_Begin_Date_Time__c),7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( Mod(TODAY()  - DATEVALUE(Claims_Begin_Date_Time__c),7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR((TODAY() - DATEVALUE(Claims_Begin_Date_Time__c))/7)*5-1),

CASE(MOD( DATEVALUE(Claims_Begin_Date_Time__c ) - DATE(1985,6,24),7),
0 , CASE( Mod(DATEVALUE(Claims_End_Date_Time__c ) - DATEVALUE(Claims_Begin_Date_Time__c),7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD(DATEVALUE(Claims_End_Date_Time__c ) - DATEVALUE(Claims_Begin_Date_Time__c),7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD(DATEVALUE(Claims_End_Date_Time__c ) - DATEVALUE(Claims_Begin_Date_Time__c),7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD(DATEVALUE(Claims_End_Date_Time__c ) - DATEVALUE(Claims_Begin_Date_Time__c),7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD(DATEVALUE(Claims_End_Date_Time__c ) - DATEVALUE(Claims_Begin_Date_Time__c),7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD(DATEVALUE(Claims_End_Date_Time__c ) - DATEVALUE(Claims_Begin_Date_Time__c),7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD(DATEVALUE(Claims_End_Date_Time__c ) - DATEVALUE(Claims_Begin_Date_Time__c),7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR((DATEVALUE( Claims_End_Date_Time__c ) - DATEVALUE( Claims_Begin_Date_Time__c ))/7)*5-1)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claims Business Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>