unpackaged/main/default/objects/Case/fields/Claims_Comments__c.field-meta.xml
<CustomField>
    <fullName>Claims_Comments__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>This field is specific for Claim&#39;s private comments.</inlineHelpText>
    <label>Claim&#39;s Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>