unpackaged/main/default/objects/Case/fields/Claims_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Claims_End_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claims End Date/Time</label>
    <type>DateTime</type>
</CustomField>