unpackaged/main/default/objects/Case/fields/Claims_Form_Count__c.field-meta.xml
<CustomField>
    <fullName>Claims_Form_Count__c</fullName>
    <label>Claims Form Count</label>
    <summaryForeignKey>Claims_Form__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>