unpackaged/main/default/objects/Case/fields/Claims_Owner__c.field-meta.xml
<CustomField>
    <fullName>Claims_Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claims Owner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>