unpackaged/main/default/objects/Case/fields/Claims_Related__c.field-meta.xml
<CustomField>
    <fullName>Claims_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claims Related</label>
    <type>Checkbox</type>
</CustomField>