unpackaged/main/default/objects/Case/fields/Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason__c</fullName>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small Case</fullName>
            </value>
            <value>
                <fullName>Non-Core State Quote</fullName>
            </value>
            <value>
                <fullName>Inforce LifeMap Customer</fullName>
            </value>
            <value>
                <fullName>Inforce USAble Customer</fullName>
            </value>
            <value>
                <fullName>Non-standard Request</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>