unpackaged/main/default/objects/Case/fields/Closed_at_POC__c.field-meta.xml
<CustomField>
    <fullName>Closed_at_POC__c</fullName>
    <description>This field is used in SLA Report</description>
    <formula>IF( IsClosedOnCreate , 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed at POC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>