unpackaged/main/default/objects/Case/fields/Closed_Because_of_Inactivity__c.field-meta.xml
<CustomField>
    <fullName>Closed_Because_of_Inactivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Because of Inactivity</label>
    <type>Checkbox</type>
</CustomField>