unpackaged/main/default/objects/Case/fields/Closed_Before_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Before_Effective_Date__c</fullName>
    <formula>DATEVALUE(  CreatedDate  )  &lt; Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Before Effective Date</label>
    <type>Checkbox</type>
</CustomField>