unpackaged/main/default/objects/Case/fields/Closed_by_Email__c.field-meta.xml
<CustomField>
    <fullName>Closed_by_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed by Email</label>
    <type>Checkbox</type>
</CustomField>