unpackaged/main/default/objects/Case/fields/Closed_Date_Month__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date_Month__c</fullName>
    <formula>LPAD(TEXT(MONTH( DATEVALUE(ClosedDate ))) ,2,&quot;0&quot;) +&quot;-&quot;+ 
CASE(MONTH(DATEVALUE(ClosedDate)), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;,
NULL) +&#39; &#39;+
TEXT(YEAR(DATEVALUE(ClosedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Date Month</label>
    <type>Text</type>
</CustomField>