unpackaged/main/default/objects/Case/fields/Complex_Issue__c.field-meta.xml
<CustomField>
    <fullName>Complex_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complex Issue</label>
    <type>Checkbox</type>
</CustomField>