unpackaged/main/default/objects/Case/fields/Concierge_Case__c.field-meta.xml
<CustomField>
    <fullName>Concierge_Case__c</fullName>
    <formula>Master_Group__r.Concierge_Service__c  || Contact.Concierge_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concierge Case</label>
    <type>Checkbox</type>
</CustomField>