unpackaged/main/default/objects/Case/fields/Connection_Mapping_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Connection_Mapping_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Connection Mapping Start Date</label>
    <type>Date</type>
</CustomField>