unpackaged/main/default/objects/Case/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact not in system</label>
    <length>255</length>
    <type>Text</type>
</CustomField>