unpackaged/main/default/objects/Case/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <description>This formula field holds Contact Role for Contact</description>
    <formula>IF(
    ISPICKVAL(Contact.Role__c , &quot;Account Executive&quot;),&#39;Account Executive&#39;,
IF(    
    ISPICKVAL(Contact.Contact_Type__c , &quot;Agent&quot;),&#39;Agent&#39;,
IF(    
    ISPICKVAL(Contact.Contact_Type__c , &quot;Benefit Manager&quot;),&#39;Benefit Manager&#39;,
IF(
    ISPICKVAL(Contact.Role__c , &quot;Book Keeper&quot;),&#39;Book Keeper&#39;,
IF(    
    ISPICKVAL(Contact.Contact_Type__c , &quot;Group Contact&quot;),&#39;Group Contact&#39;,
IF(    
    ISPICKVAL(Contact.Contact_Type__c , &quot;Regional VP&quot;),&#39;Regional VP&#39;,
IF(    
    ISPICKVAL(Contact.Contact_Type__c , &quot;Writing Agent&quot;),&#39;Writing Agent&#39;,
IF(    
    ISPICKVAL(Contact.Contact_Type__c , &quot;Billing Contact&quot;),&#39;Billing Contact&#39;,&quot;&quot;
))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Role</label>
    <type>Text</type>
</CustomField>