unpackaged/main/default/objects/Case/fields/Contact_Save_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Save_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Save Phone</label>
    <type>Phone</type>
</CustomField>