unpackaged/main/default/objects/Case/fields/Count_of_Exception_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Exception_Guidelines__c</fullName>
    <label>Count of Exception Guidelines</label>
    <summaryForeignKey>Exception_Guidlines__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>