unpackaged/main/default/objects/Case/fields/Cover_Sheet_Sent__c.field-meta.xml
<CustomField>
    <fullName>Cover_Sheet_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is required field to close the case if the case type/subtype is New Business Setup:New Business-FT or General Service:Implementation.</description>
    <label>Cover Sheet Sent</label>
    <type>Checkbox</type>
</CustomField>