unpackaged/main/default/objects/Case/fields/COVID_19_Related__c.field-meta.xml
<CustomField>
    <fullName>COVID_19_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Reason for contact is Related to Novel Coronavirus</inlineHelpText>
    <label>COVID-19 Related</label>
    <type>Checkbox</type>
</CustomField>