unpackaged/main/default/objects/Case/fields/Create_Child_Case_for_Central_Records__c.field-meta.xml
<CustomField>
    <fullName>Create_Child_Case_for_Central_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Child Case for Central Records</label>
    <type>Checkbox</type>
</CustomField>